--- a/.eslintrc
+++ b/.eslintrc
@@ -33,10 +33,13 @@
         "react/jsx-filename-extension": 0,
         "jsx-a11y/click-events-have-key-events": 0,
         "jsx-a11y/no-noninteractive-element-interactions": 0,
-        "react/jsx-one-expression-per-line":0
+        "react/jsx-one-expression-per-line": 0,
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     },
     "plugins": [
-        "react"
+        "react",
+        "react-hooks"
     ],
     "parserOptions": {
         "ecmaFeatures": {
