--- a/package.json
+++ b/package.json
@@ -44,12 +44,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "lodash.debounce": "^4.0.8",
-    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "redux-thunk": "^2.3.0"
+    "react-router-dom": "^5.0.0"
   }
 }
